{
    "name": "GameInput",
    "maps": [
        {
            "name": "GameSceneInput",
            "id": "1b35c06c-c809-4853-8dd4-ac8ac89c01e7",
            "actions": [
                {
                    "name": "TogglePauseMenu",
                    "type": "Button",
                    "id": "ba7a7ae3-6206-448f-85e6-66fbcdeef0cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ea93171d-434b-4471-9760-0fe9c14b47ea",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3be19b5-5826-4dc6-a7a9-b53e5d5acd77",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}